--- a/style.css
+++ b/style.css
@@ -80,6 +80,8 @@ iframe {
     background-color: #ddd;
     width: 100%;
     height: 100%;
+    min-height: 500px;
+    max-width: 700px;
 
 }
 .search-buttons {
