--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 40px rgba(0, 0, 0, 0.1);
     text-align: center;
     margin: auto;
     max-width: 1000px;
@@ -82,6 +81,8 @@ iframe {
     height: 100%;
     min-height: 450px;
     max-width: 685px;
+    border-radius: 8px;
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.1);
 
 }
 .search-buttons {
