--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@
     background: rgb(110,164,191);
     background: linear-gradient(90deg, rgba(110,164,191,1) 0%, rgba(0,255,229,1) 100%);
 }
+.grid-parent {
+    display: grid;
+    grid-template-columns: 100fr 1fr
+
+}
 .userContainer {
     background-color: #fff;
     padding: 20px;
@@ -84,7 +89,6 @@ iframe {
     width: 100%;
     height: 100%;
     min-height: 450px;
-    max-width: 685px;
     border-radius: 8px;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.1);
 
