--- a/style.css
+++ b/style.css
@@ -99,3 +99,9 @@ iframe {
     align-items: center;
     margin-top: 10px;
 }
+.refresh {
+    height: 50px; 
+    width: 50px; 
+    border-radius: 100px; 
+    padding: 0px; 
+}
