--- a/style.css
+++ b/style.css
@@ -8,15 +8,17 @@
     max-width: 600px;
     margin-top: 150px;
 }
+
 .gradient {
-    background: rgb(110,164,191);
-    background: linear-gradient(90deg, rgba(110,164,191,1) 0%, rgba(0,255,229,1) 100%);
+    background: rgb(110, 164, 191);
+    background: linear-gradient(90deg, rgba(110, 164, 191, 1) 0%, rgba(0, 255, 229, 1) 100%);
 }
+
 .grid-parent {
     display: grid;
     grid-template-columns: 100fr 1fr
-
 }
+
 .userContainer {
     background-color: #fff;
     padding: 20px;
@@ -72,10 +74,12 @@ button {
     text-align: center;
     /* Center-align text within the page-title div */
 }
+
 .greyLetters {
     font-size: 14px;
     color: #888;
 }
+
 #sdiInput {
     padding: 10px;
     margin: 10px 0;
@@ -84,7 +88,7 @@ button {
     /* Remove margin: 0 auto; */
 }
 
-iframe {   
+iframe {
     background-color: #ddd;
     width: 100%;
     height: 100%;
@@ -93,15 +97,36 @@ iframe {
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.1);
 
 }
+
 .search-buttons {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 10px;
 }
+
 .refresh {
-    height: 50px; 
-    width: 50px; 
-    border-radius: 100px; 
-    padding: 0px; 
+    height: 50px;
+    width: 50px;
+    border-radius: 100px;
+    padding: 0px;
+}
+
+
+#autocomplete-results {
+    border: 1px solid #ccc;
+    margin: 50px;
+    max-height: 150px;
+    overflow-y: auto;
+    /* position: absolute; */
+    background-color: #ffffff;
+}
+
+.result {
+    padding: 8px;
+    cursor: pointer;
+}
+
+.result:hover {
+    background-color: #f0f0f0;
 }
